- Refactor: removed ExecutionSemester reference in dml
- Refactor: updated academic-core module dependency

4.4.0 (04-12-2019)
- New Fixture: MBWay payments interface

4.3.1 (04-11-2019)
- Improvement: Create SAFT address as non default physical address
- Refactor: Disable RegistrationService bennu signal handler

4.3.0 (22-10-2019)
- Bug Fix: Throw expcetion if academic tariff is not found when creating academic debt associated with tresury event target
- Refactor: Replace ExecutionSemester by ExecutionInterval
- Refactor: Service to ensure debt account for person is created

4.2.0 (26-09-2019)
- Refactor: upgraded fenixedu-academic-core

4.1.0 (18-09-2019)
- New Fixture: Create payment reference code for interest debit entries

4.0.5 (18-09-2019)
- Refactor: Add isSuccess() to return getSuccess() of type boolean

4.0.4 (16-09-2019)
- Bug Fix: Use enrolment date in execution year, instead of current date for entry date of academic tax debts
- Improvement: Print error in creating debt account in log, in registration creation

4.0.3 (05-09-2019)
- Bug Fix: In aligning due date in academic debt generation, do nothing if the best due date is not found instead of throwing an exception

4.0.2 (04-09-2019)
- Fix: 1A1V document with tuitions

4.0.1 (30-08-2019)
- Improvement: On creating academic debts, Add to registration designation the protocol and registration start date, in order to distinguish two registration with same degree

4.0.0 (07-08-2019)
- Refactor: Associate finantial entity to an unit, beside administrative office
- Refactor: Use default locale academic entities methods to retrieve designation
- Refactor: Academic entities queries (ex: all statutes) is provided by service
- Refactor: Academic fiscal number and country is provided by service plugged
- Refactor: Support for custom academic debts
- Refactor: Support in entity model for treasury debt report for degree and execution year and selection of type of debts